<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="17dp"
    android:background="@drawable/layout_curve">

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Okay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactslayoutId"
        app:layout_constraintVertical_bias="0.15" />

    <LinearLayout
        android:id="@+id/contactslayoutId"
        android:layout_width="310dp"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView

            android:id="@+id/about"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/about"
            android:gravity="center"
            android:textSize="16dp" />
        <TextView
            android:id="@+id/DeveloperName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/developer"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/contactsNumber"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/contact_number"
            android:textSize="16dp" />

        <TextView
            android:id="@+id/email_adress"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/email_address"
            android:textSize="16dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>