<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="VectorDrawableCompat"
    tools:context=".ClockActivity">

    <Chronometer
        android:id="@+id/updatingTimechronometerid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <TextView
        android:id="@+id/digit_time_textview_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_time"
        android:textColor="@android:color/black"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35"/>

    <ImageButton
        android:id="@+id/buttonAccessTimerId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessTimer"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:background="@android:color/transparent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:srcCompat="@drawable/ice_timer"/>


    <ImageButton
        android:id="@+id/buttonAccessStopwatchId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accessStopwatch"
        android:textSize="13sp"
        android:textColor="@android:color/black"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.90"
        app:srcCompat="@drawable/ic_stopwatch"/>

    <TextView
        android:id="@+id/date_textviewid"
        android:layout_width="124dp"
        android:layout_height="34dp"
        android:text="@string/no_date"
        android:gravity="center"
        android:textColor="@android:color/black"

        app:layout_constraintBottom_toTopOf="@+id/updatingTimechronometerid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/digit_time_textview_id"
        app:layout_constraintVertical_bias="0.171" />

</androidx.constraintlayout.widget.ConstraintLayout>